# dirconf

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  mkdocs.yml  publish.yml  python-package.yml
docs/: index.md
docs/_static/js/: marimo-button.js
docs/examples/101/: notebook.md
examples/101/: notebook.py
examples/101/__marimo__/session/: notebook.py.json
examples/101/basic/: config.yml
examples/101/basic_json/: config.json
examples/101/nested/: metadata.yml
examples/101/nested/basic/: config.yml  data.csv
examples/jules/: notebook.py
examples/jules/__marimo__/session/: notebook.py.json
examples/jules/config/inputs/: Loobos_1997.nc
src/config_foundry/: __init__.py  config.py  filter.py  handler.py  utils.py
src/dirconf/: config.py  filter.py
src/metaconf/: __init__.py  config.py  filter.py  handler.py  node.py  utils.py
tests/: test_config.py  test_dynamic_construction.py  test_filter.py  test_handler.py  test_node.py  test_utils.py
