[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "metaconf"
version = "0.3.2"
authors = [
    {name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com"}
]
description = "Simple meta-configuration of configuration files using Python dataclasses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []
keywords = ["configuration", "config"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "ruff>=0.12.3",
    "rust-just>=1.50.0",
    {include-group = "docs"},
    {include-group = "test"},
]
docs = [
    "markdown-exec[ansi]>=1.11.0",
    "mkdocs>=1.6.1",
    "mkdocs-include-exclude-files>=0.1.0",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-ipynb>=0.1.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
]
examples = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "f90nml>=1.4.5",
    "numpy>=2.3.2",
    "xarray>=2025.7.1",
    "pyyaml>=6.0.2",
    "netcdf4>=1.7.2",
]
test = [
    "coverage>=7.13.5",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
  #   "D",   # pydocstyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
    "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.jupytext]
formats = "ipynb,md"
