[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dirconf"
version = "0.5.0"
description = "Simple meta-configuration of configuration files using Python dataclasses."
authors = [
    { name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []
keywords = ["configuration", "config"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://jmarshrossney.github.io/dirconf"
Repository = "https://github.com/jmarshrossney/dirconf"
Documentation = "https://jmarshrossney.github.io/dirconf"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "ruff>=0.12.3",
    "rust-just>=1.50.0",
    {include-group = "docs"},
    {include-group = "test"},
]
docs = [
    "marimo>=0.23.3",
    "marimo-md-export>=0.4.3",
    "mkdocstrings[python]>=0.30.0",
    "zensical>=0.0.39",
]
test = [
    "coverage>=7.13.5",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src/", "tests/"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
  #   "D",   # pydocstyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
    "I",   # isort
]

[tool.ruff.lint.per-file-ignores]
# Marimo notebooks use bare expressions for display output (B018),
# contain prose that naturally exceeds 88 chars (E501),
# include academic citations with en dashes (RUF001),
# and may have unused variables from exploratory cells (F841).
"examples/*/notebook.py" = ["B018", "E501", "F841", "RUF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

